# Mega-prosjekt

./: .gitignore  README.md  color_params.yaml  config.json
camera_interface/: package.xml  setup.py
camera_pipeline/: README.md  package.xml  setup.cfg  setup.py
camera_pipeline/camera_pipeline/: color_detector.py
camera_pipeline/config/: default_cam.yaml
camera_pipeline/launch/: pipeline.launch.py
camera_pipeline/rviz/: cube_task_controller.rviz
cube_bringup/: README.md  package.xml  setup.cfg  setup.py
cube_bringup/launch/: cube_bringup_launch.py
custom_cube_msgs/: CMakeLists.txt  package.xml
custom_cube_msgs/msg/: CubeDetection.msg  CubeDetections.msg
error_handler/: README.md  package.xml  setup.cfg  setup.py
error_handler/error_handler/: error_handler_node.py
error_handler/launch/: error_handler_launch.py
log/: latest_build
movement_controller/: README.md  package.xml  setup.cfg  setup.py
movement_controller/launch/: movement_controller_launch.py
movement_controller/movement_controller/: movement_controller_node.py
movement_planner/: README.md  package.xml  setup.cfg  setup.py
movement_planner/launch/: movement_planner_launch.py
movement_planner/movement_planner/: movement_planner_node.py
robot_comm/: package.xml  setup.cfg  setup.py
robot_comm/robot_comm/: robot_comm_node.py
ur_mover/: README.md  package.xml  setup.cfg  setup.py
ur_mover/launch/: ur_mover_node_launch.py
ur_mover/ur_mover/: ur_mover_node
