<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- Navn og versjon -->
  <name>cube_bringup</name>
  <version>0.0.0</version>

  <!-- Kort beskrivelse av pakken -->
  <description>Launch-pakke for å starte alle noder i Cube-systemet.</description>

  <!-- Vedlikeholderinfo -->
  <maintainer email="TeemoTeemo123@outlook.com">frans</maintainer>
  <license>Apache-2.0</license>

  <!-- Eksekveringstid avhengigheter -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  
  <!-- Avhengigheter til de andre pakkene i systemet -->
  <exec_depend>camera_pipeline</exec_depend>
  <exec_depend>error_handler</exec_depend>
  <exec_depend>movement_planner</exec_depend>
  <exec_depend>movement_controller</exec_depend>

  <!-- Testverktøy (valgfritt, men nyttig ved CI) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ROS2 bygger pakken som en Python-pakke -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

