<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>movement_controller</name> <!-- Navnet på ROS 2-pakken -->
  <version>0.0.0</version> <!-- Nåværende versjon (kan økes senere) -->
  <description>TODO: Package description</description> <!-- Fyll inn en beskrivelse før levering -->

  <!-- Vedlikeholderinfo -->
  <maintainer email="TeemoTeemo123@outlook.com">frans</maintainer>
  <license>Apache-2.0</license> <!-- Open-source-lisens -->

  <!-- Kjøringstid-avhengigheter -->
  <exec_depend>rclpy</exec_depend> <!-- ROS2 Python klientbibliotek -->
  <exec_depend>std_msgs</exec_depend> <!-- ROS2 standard meldinger -->
  <exec_depend>json</exec_depend> <!-- Python standardbibliotek -->

  <!-- Test-avhengigheter -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Angir at pakken bygges som Python -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
