<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>movement_planner</name> <!-- Navnet på ROS2-pakken -->
  <version>0.0.0</version> <!-- Versjon (kan endres etter hvert) -->
  <description>TODO: Package description</description> <!-- Bør oppdateres med kort beskrivelse -->

  <maintainer email="TeemoTeemo123@outlook.com">frans</maintainer> <!-- Ansvarlig utvikler -->
  <license>Apache-2.0</license> <!-- Lisensvalg -->

  <!-- Kjørbare avhengigheter -->
  <exec_depend>rclpy</exec_depend> <!-- ROS2 Python API -->
  <exec_depend>std_msgs</exec_depend> <!-- Standard meldingsformat -->
  <exec_depend>json</exec_depend> <!-- Python-modul for JSON-parsing -->

  <!-- Avhengigheter for testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type> <!-- Angir at det er en Python-basert ROS2-pakke -->
  </export>
</package>

