<?xml version="1.0"?>
<package format="3">
  <name>robot_comm</name>
  <version>0.0.0</version>
  <description>Node for å sende posisjoner til UR-robot via MoveIt og gi status</description>
  <maintainer email="jorgen@todo.todo">Jørgen N. Melling</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Avhengigheter for kjøretid -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
