<?xml version="1.0"?>
<package format="3">
  <!-- Navn på pakken -->
  <name>robot_comm</name>

  <!-- Versjon, kan oppdateres ved endringer -->
  <version>0.0.0</version>

  <!-- Kort beskrivelse av pakken -->
  <description>Node for å sende posisjoner til UR-robot via MoveIt og gi status</description>

  <!-- Vedlikeholder og kontaktinfo -->
  <maintainer email="jorgen@todo.todo">Jørgen N. Melling</maintainer>

  <!-- Lisens for distribusjon -->
  <license>MIT</license>

  <!-- Byggeverktøy for Python-pakker i ROS2 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Kjøretidsavhengigheter (run dependencies) -->
  <exec_depend>rclpy</exec_depend>      
  <exec_depend>geometry_msgs</exec_depend>  
  <exec_depend>std_msgs</exec_depend>   
  <exec_depend>shape_msgs</exec_depend> 
  <exec_depend>moveit_msgs</exec_depend>   

  <!-- Eksport for å angi at dette er en Python-basert ROS2-pakke -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
